# graphics2-proj

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  graphics2-proj.sln  graphics2-proj.vcxproj  graphics2-proj.vcxproj.filters
CMake/: Findglfw3.cmake
assets/models/: spaceship.mtl
assets/shaders/: basic.frag  basic.glsl  basic.vert  basicDeferred.frag  basicDeferred.vert  dirLightPass.frag  dirLightPass.vert  line.frag  line.vert  null.vert  planetDeferred.frag  planetDeferred.vert  pointLightPass.frag  skybox.vert
include/: date.h
include/KHR/: khrplatform.h
include/glad/: glad.h
src/: glad.c  main.cpp
src/framework/: Application.cpp  Application.h
src/framework/ecs/: Component.h  Entity.h
src/framework/graphics/: Camera.cpp  Camera.h  Color.cpp  Color.h  Cubemap.cpp  Cubemap.h  FBOAttachment.h  Framebuffer.cpp  Framebuffer.h  FramebufferBuilder.cpp  FramebufferBuilder.h  GLContext.cpp  GLContext.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  ShaderUniform.h  Skybox.cpp  Skybox.h  Texture2D.cpp  Texture2D.h
src/framework/input/: InputHandler.cpp  InputHandler.h
src/framework/io/: OBJLoad.cpp  OBJLoad.h  ResourceManager.cpp  ResourceManager.h
src/framework/math/: GJK.cpp  GJK.h  Transform.cpp  Transform.h  Vertex.h
src/framework/physics/: AABB.h  GJK.cpp  GJK.h  Octree.cpp  Octree.h  Quickhull.cpp  Quickhull.h  Rigidbody.h  Shapes.cpp  Shapes.h
src/framework/rendering/: DeferredRenderer.cpp  DeferredRenderer.h  GBuffer.cpp  GBuffer.h  Lights.h  Renderable.cpp  Renderable.h  Renderer.h  Scene.cpp  Scene.h  SceneNode.h
src/framework/util/: Convenience.cpp  Convenience.h  (+4 more)
src/subdir/: ClassTest.cpp  ClassTest.h
(+4 files in other folders)
